# Ursprung

./: .gitattributes  .gitignore  AGENTS.md  GATEWAY_SPEC.md  NOTICE  README.md  THIRD_PARTY_NOTICES.md  demo_closed_loop.py  loop.py  method.md  session_symbols.txt  session_verifier.py  step1_dual_witness_baseline.py  step2_bias_correction.py  step3_temporal_hardening.py  step4_ck_interval.py  step5_fbleau_compare.py  step6_threshold_sweep.py
DVSM/: .gitignore  Makefile  PROOF_OBLIGATIONS.md  README.md  coupling_audit.py  discrete_certificate.py  dvsm_backend.py  dvsm_reference.py  invariant_ledger.py  kappa_remediation.py  reality_core_probe.py  test_coupling_audit.py  test_discrete_certificate.py  test_dvsm_backend.py  test_dvsm_reference.py  test_invariant_ledger.py  test_kappa_remediation.py  test_reality_core_probe.py  verify.py
DVSM/commercial/: .gitignore  COMMERCIAL.md  LICENSE-COMMERCIAL.md  binframe_adapter.py  commercial_obligations.py  compliance_doc.py  kernel_auditor.py  ledger.tsv  obligations.tsv  test_binframe_adapter.py  test_commercial_obligations.py  test_compliance_doc.py  test_kernel_auditor.py  test_live_gate.py
DVSM/reality_core/: .gitignore  Cargo.toml  PROVENANCE.md  README.md  clean.csv  leak.csv
DVSM/reality_core/examples/: demo.rs  dump_trace.rs
DVSM/reality_core/src/: certificate.rs  core.rs  ffi.rs  lib.rs  linalg.rs  runtime.rs  trace.rs
DVSM/reality_core/tests/: hardening.rs  invariants.rs
Rust/: Cargo.toml  README.md  gen_fixtures.py
Rust/examples/: chokepoints.rs
Rust/menger_telemetry/: Cargo.toml  PROVENANCE.md  README.md
Rust/menger_telemetry/src/: certificate.rs  ffi.rs  fixed.rs  kernel.rs  lib.rs  menger.rs  sha256.rs
Rust/src/: artifacts.rs  binframe_adapter.rs  claim_ledger.rs  commercial_obligations.rs  contraction_cert.rs  coupling_audit.rs  epistemic_types.rs  frontier_gate.rs  gateway.rs  invariant_ledger.rs  lib.rs  orchestrator.rs  residual_channel.rs
Rust/tests/: binframe.rs  chokepoints.rs  cmi_ingest.rs  commercial_gate.rs  contraction_cert.rs  coupling.rs  differential_residual.rs  gateway.rs  lift.rs  matrix_ingest.rs  streaming.rs
Rust/tests/fixtures/: channel.tsv  null.tsv
channel_profiler/: README.md  __init__.py  block_bootstrap.py  estimator.py  messages.py  protocols.py  requirements.txt  window_manager.py
docs/: ADJUDICATION_THROUGHPUT_BOUNDARY.md  AUTHORITY_ARBITRAGE_BOUNDARY.md  BOUNDARY_MAP.md  CHANNEL_PROFILER_SPEC.md  CONDUIT_PROVENANCE_SPEC.md  EMBEDDED_AUTHORING.md  EPISTEMIC_ACCOUNTING.md  FAILURE_MODE_MATRIX.md  GENEALOGY.md  INFORMATION_INTENT.md  INFORMATION_MEDIATION_RUNTIME_SPEC.md  LANGUAGE_EPISTEMICS_PRIOR_ART.md  LATENT_SPACETIME.md  LICENSE_DECISIONS.md  LLM_ON_TRACK.md  MEASUREMENT_DISCIPLINE.md  MIN_ENTROPY_DUAL_WITNESS_STUDY.md  PREDICTIVE_FIDELITY.md  PRODUCT_ADAPTATION_PATTERNS.md  PROVENANCE.md  REAL_SILICON_BENCHMARK.md  REFERENCE_belief_propagation.md  RENDER_VERIFICATION_RECORD.md  SELF_MODIFICATION_BOUNDARY.md  STRESSORS.md  TOOL_VALUE_LEDGER.md  V0_2_1_CANONICAL_REFERENCE.md
experiments/adversarial_runtime/: README.md  adversarial.py  run.py
experiments/bench_gpu/: README.md  backends.py  contract.py  frame.py  observation.py  run.py  timing.py
experiments/bench_gpu_real/: Cargo.toml  README.md
experiments/bench_gpu_real/src/: main.rs
experiments/failure_taxonomy/: README.md  failure.py  run.py
experiments/latent_phase1/: README.md  benchmark.py  encoders.py  run.py  world.py
experiments/reality_kernel/core_rs/: Cargo.toml  README.md  golden_kernel.tsv
experiments/reality_kernel/core_rs/src/: lib.rs
experiments/reality_kernel/core_rs/tests/: adversarial.rs  differential.rs
experiments/toy_scene/: scene.py  (+2 more)
notebooks/: closed_loop_demo.ipynb
repe_harness/: README.md  epistemic_monad.py  gates.txt  gen_index.py  index.json  ingest_activations.py  orchestrator.py  phase10_airgap.py  phase1_probe.py  phase2_engine.py  phase3_monitor.py  phase4_falsify.py  phase5_closed_loop.py  phase6_coherent_negative.py  phase7_regression_filter.py  phase8_confounder_firewall.py  phase9_grounded_steer.py
research/: README.md  SHA256_STRESS_AUDIT.md  SONOLUMINESCENCE_AUDIT.md  SONOLUMINESCENCE_EXPERIMENT_ROADMAP.md  SONOLUMINESCENCE_SIMULATION_PROGRAM.md  carry_anf.py  carry_markov_ck.py  collatz_reconcile.py  sha256_2adic_branch.py  sha256_avalanche.py  sha256_degree.py
tests/: test_block_bootstrap.py  test_estimator.py  test_ursprung.py
ursprung/: __init__.py  _workbench.py  accumulation.py  adversarial_dynamics.py  adversarial_scenes.py  adversary_capacity.py  adversary_harness.py  allocation.py  behavioral_harness.py  capability.py  causal_access.py  causal_continuity.py  causal_contract.py  causal_mutation.py  causal_surface.py  channel_discovery.py  conventions.py  convergence.py  dependency_integrity.py  dependency_surface.py  disclosure.py  divergence.py  execution_surface.py  fidelity_conservation.py  ghost_report.py  perceptual.py  pfal_bench.py  policy_arena.py  polygon_reconciliation.py  prediction.py  promotion_gate.py  provider_contract.py  raster.py  raster_bench.py  readiness.py  reality_debt.py  reality_harness.py  reconstruction.py  registry.py  render_record.py  (+14 more)
weltwerk/: HAGERSTRAND_LINEAGE.md  README.md  README_PHASE10.md  README_PHASE11.md  README_PHASE12.md  README_PHASE9.md  SCOPE.md  fork.py  observers.py  test_conformance.py  test_observers.py  test_weltwerk.py  world.py
(+304 files in other folders)
