# SPDX-License-Identifier: AGPL-3.0-only
[package]
name = "ursprung"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["Daniel J. Dillberg"]
description = "Ursprung fundamentals in Rust: the honesty contract (AnalysisResult), the epistemic type Grounded<T>, the graded claim ledger, the frontier gate, the residual-channel diagnostic, and the Epistemic Runtime Orchestrator (two chokepoints). std-only, zero dependencies."
repository = "https://github.com/Dedoc-9/Ursprung"
keywords = ["verification", "epistemics", "honesty", "orchestrator"]
categories = ["science"]

[lib]
name = "ursprung"
path = "src/lib.rs"

# The single-binary integrity gate: ingest a BinaryFrame dump → graded obligations → proof-gated ledger
# (live-bound via a build receipt) → fail-closed verdict. `parts ≠ whole`; `receipt ≠ proof`.
[[bin]]
name = "ursprung-gateway"
path = "src/bin/gateway.rs"

# §6 metrology harness: a zero-dependency, std-only throughput/latency benchmark over the streaming pipeline.
# NOT a `cargo bench` target (that needs nightly or Criterion = a dependency); a plain binary using
# std::time::Instant. Timing is non-deterministic, so it lives OUTSIDE the test suite. `measured ≠ guaranteed`.
[[bin]]
name = "gateway-bench"
path = "src/bin/gateway_bench.rs"

# Zero dependencies on purpose — the Python core is pure-stdlib; this mirrors that discipline.
[dependencies]
