# SPDX-License-Identifier: AGPL-3.0-only
# Reality Kernel — Rust CORE port. std-only (no external crates) so it builds offline.
# This crate is a CANDIDATE: it was authored without a toolchain in-session and is UNVERIFIED here.
# Verify on a real machine:  cargo test   (semantic preservation + adversarial)  and later  cargo bench.
[package]
name = "reality_core"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[lib]
path = "src/lib.rs"

[dependencies]
# intentionally empty — std only
